fixes overflows and centering

--- a/src/css/story/footer.styl
+++ b/src/css/story/footer.styl
@@ -5,6 +5,8 @@ footer.pudding-footer
 	margin-top 3rem
 	box-shadow 0 0 20px $purple
 	background-color $dark-purple
+	overflow-x: hidden
+	width 100%
 
 	.footer-recirc
 		max-width 65rem
